Prepare for 0.2.20110718.jboss release

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>javax.cache</groupId>
     <artifactId>cache-api</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2.20110718.jboss</version>
     <packaging>jar</packaging>
 
     <name>JSR107 API and SPI</name>
